# sugarpy

./: .gitignore  Dockerfile  Dockerfile.web  Makefile  README.md  api_requirements.txt  cloudbuild-web.yaml  cloudbuild.yaml  get_version.cjs  main.py  nginx-default.conf.template  pyproject.toml  todo.txt
.github/workflows/: publish.yaml  publish.yml
api/: asset.py  draw.py  main.py  model.py  utils.py
static/: app.html  index.html  styles.css
sugarpy/: __init__.py  config.py  metrics.py  norms.py
sugarpy/claucy/: __init__.py
sugarpy/integrations/app/: endpoints.py
sugarpy/morphemes/: __init__.py  exceptions.json  morphemes.py  rules.py  utils.py
sugarpy/sentences/: __init__.py  sentence_splitter.py  sentences.py
web/: about.html  help.html  index.html  package-lock.json  package.json
web/src/: About.tsx  App.tsx  Help.tsx  Home.tsx  about_main.tsx  help_main.tsx  index.css  main.tsx
