[tool.poetry]
name = "sugarpy"
version = "0.1.0"
description = "SLP metrics in python"
authors = ["George D. Torres"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
spacy = "^3.7.2"
nltk = "^3.8.1"
pylcs = "^0.1.1"
claucy = {git = "https://github.com/mmxgn/spacy-clausie.git"}
fastapi = "^0.105.0"
uvicorn = "^0.24.0.post1"
python-multipart = "^0.0.6"
matplotlib = "^3.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
