[tool.poetry]
name = "sugarpy"
version = "0.4.0"
description = "SUGAR metrics in python"
authors = ["George D. Torres"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
spacy = "^3.7.2"
nltk = "^3.8.1"
pylcs = "^0.1.1"
claucy = {git = "https://github.com/mmxgn/spacy-clausie.git"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
