[project]
name = "sugar-python"
version = "0.4.2"
description = "SUGAR metrics in python"
authors = [{ name = "George D. Torres" }]
requires-python = ">=3.9,<4"
readme = "README.md"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "spacy>=3.7.2,<4",
    "nltk>=3.8.1,<4",
    "pylcs>=0.1.1,<0.2",
    "lemminflect>=0.2.3,<0.3",
    "en-core-web-lg>=3.8.0",
]

[tool.uv]
find-links = [
    "https://github.com/explosion/spacy-models/releases/expanded_assets/en_core_web_lg-3.8.0",
]

[tool.uv.build-backend]
module-name = ["sugarpy"]
module-root = ""

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.15.1",
]
